# MLOps

./: .gitignore  README.md
.dvc/: config
lab01/: .pre-commit-config.yaml  .sops.yaml  README.md  docker-compose.yaml  main.py  public_key.asc  pyproject.toml  secrets.yaml
lab01/homework/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
lab01/homework/src/lab01_lib_homework/: app.py
lab01/homework/src/lab01_lib_homework/api/: inference.py  models.py
lab01/homework/tests/: test_fastapi.py  test_lib.py
lab01/laboratory/: .pre-commit-config.yaml  .sops.yaml  Dockerfile  public_key.asc  pyproject.toml
lab01/laboratory/models/: model.joblib
lab01/laboratory/src/lab01_lib/: main.py  settings.py
lab01/laboratory/src/lab01_lib/api/models/: iris.py
lab01/laboratory/tests/: test_settings.py
lab01/src/lab01_lib/: app.py  main.py  settings.py
lab01/src/lab01_lib/api/: inference.py  training.py
lab01/tests/: test_fastapi.py
lab02/homework/: disruptions_table.sql  homework.ipynb
lab02/laboratory/: docker-compose.yaml  main.py  notebook_01_psycopg.ipynb  notebook_02_duckdb.ipynb  pyproject.toml
lab03/homework/: homework.ipynb
lab03/laboratory/: notebook_polars.ipynb  pyproject.toml
lab04/homework/: homework.ipynb
lab04/laboratory/: laboratory.ipynb  pyproject.toml
lab04/laboratory/lab_data/: Przewodnik-po-sztucznej-inteligencji-2024_IAB-Polska-Embeddings.json  Przewodnik-po-sztucznej-inteligencji-2024_IAB-Polska.json
lab04/laboratory/milvus_db/: docker-compose.yml
lab04/laboratory/vectorscale_db/: docker-compose.yml
lab04/laboratory/vectorscale_db/init_db/: create_similar_search_service_db.sql
lab05/laboratory/: LAB_INSTRUCTION_2_MLFLOW.ipynb  ames_data_cleaning.py  ames_inspect_data.py  pyproject.toml
lab05/laboratory/lab_data/: .gitignore  ames_data_2006_2008.parquet.dvc  ames_description.txt.dvc
lab06/homework/: homework.ipynb
lab06/laboratory/: LAB_INSTRUCTION.ipynb  pyproject.toml
lab07/laboratory/: Dockerfile.onnx  Dockerfile.pytorch  laboratory.ipynb  pyproject.toml  serve_onnx_model.py  serve_pytorch_model.py
lab08/laboratory/: pyproject.toml
lab09/laboratory/: Dockerfile  pyproject.toml  report.md
lab09/laboratory/src/lab09_lib/: app.py  aws_utils.py
lab09/laboratory/src/lab09_lib/api/: inference.py
lab09/laboratory/tests/: test_fastapi.py
lab12/homework/: compose.yaml  pyproject.toml
lab12/homework/config/: airflow.cfg
lab12/homework/dags/: first_dag.py  second_dag.py
lab12/homework/localstack-init/ready.d/: 01-create-buckets.sh
lab12/homework/postgres-storage-init/: 01-init.sql
lab12/laboratory/: Dockerfile  README.md  compose.yaml  pyproject.toml
lab12/laboratory/config/: airflow.cfg
lab12/laboratory/dags/: 01_class_pipeline.py  02_taskflow_pipeline.py  03_scheduling.py  04_backfilling.py  05_scheduling_with_venvs.py  06_s3_integration.py  07_connections_and_variables.py
lab12/laboratory/localstack-init/ready.d/: 01-create-buckets.sh
lab12/laboratory/postgres-storage-init/: 01-init.sql
lab13/homework/: .dockerignore  Dockerfile  README.md  config.py  docker-compose.yml  logger.py  main.py  prompts.py  pyproject.toml  weather_mcp.py
lab13/laboratory/: README.md  exercise1.py  exercise2.py  exercise3_mcp1.py  exercise3_mcp2.py  exercise3_vllm.py  exercise4.py  exercise4_mcp.py  exercise5.py  pyproject.toml
