[project]
name = "lab01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-dotenv>=0.5.2",
    "python-dotenv>=1.1.1",
]


[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["lab01_lib"]
exclude = ["tests*"]


[tool.pytest.ini_options]
env_files = [".env.test"]

[tool.ruff]
line-length = 140

