[project]
name = "laboratory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "psycopg>=3.2.10",
    "pyarrow>=21.0.0",
    "ruff>=0.14.0",
    "scipy>=1.16.2",
]
