[project]
name = "laboratory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]
