[project]
name = "laboratory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"



dependencies = [
    "click",
    "dvc",
    "feature-engine",
    "jupyter",
    "mlflow",
    "numpy",
    "pandas",
    "pyarrow",
    "ruff",
    "scikit-learn",
    "torch",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
