[project]
name = "MLOps_course_AGH_lab_06"
version = "1.0.0"
description = ""
readme = "README.md"

requires-python = "==3.11.*"

dependencies = [
    "captum",
    "cleanlab",
    "datasets",
    "evaluate>=0.4.6",
    "giskard",
    "jupyter",
    "matplotlib",
    "pandas",
    "ruff",
    "scikit-learn",
    "seaborn>=0.13.2",
    "sentence-transformers",
    "transformers[torch]",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" }
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
