[project]
name = "lab9_mlops_application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.1",
    "clean-text>=0.6.0",
    "fastapi>=0.118.2",
    "joblib>=1.5.2",
    "pydantic>=2.12.0",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-dotenv>=0.5.2",
    "requests>=2.32.5",
    "ruff>=0.14.0",
]


[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["lab09_lib"]
exclude = ["tests*"]


[tool.ruff]
line-length = 140

[tool.ruff.lint]
# Config found on: https://www.reddit.com/r/Python/comments/15o73kq/what_ruff_config_do_you_use/
# Read more here https://beta.ruff.rs/docs/rules/
# By default, Ruff enables Flake8's E and F rules
# Pyflakes - F, pycodestyle - E, W
# flake8-builtins - A
# Pylint - PLC, PLE, PLW
# isort - I
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[tool.pytest.ini_options]
env_files = [".env"]
